--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-flask==0.10.1
-flask-bootstrap==3.3.5.3
+Django==1.8
 sqlalchemy==1.0.8
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.0
 pymongo==3.0.3
 PyMySQL==0.6.6
 Py3DNS==3.1.0
